kubernetes/k8s-cert-manager/k8s-mtls-cert-manager/backend-gateway-mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: backend-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "server.mycompany.com"
      tls:
        mode: MUTUAL
        credentialName: backend-crt
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-vs
spec:
  hosts:
    - "server.mycompany.com"
  gateways:
    - backend-gateway
  http:
    - route:
        - destination:
            host: helidon-examples-todo-backend
            port:
              number: 80
          weight: 100
